apply Edith's suggestions

--- a/hire.html
+++ b/hire.html
@@ -49,9 +49,9 @@
         </div>
         <div class="content">
           <b>Your data are not moving fluidly, and I know why.</b><br>
-          In a fast-paced environment rarely it is possible to move things forward 
+          In a fast-paced environment it is rarely possible to move things forward 
           while leveraging data flow's quality. Expertises are required to tackle bottle necks,
-          often just observing things from different point of views.
+          often just observing things from different points of view.
           Let's discover together how to increase your efficiency.
         </div>
       </div>
@@ -60,7 +60,7 @@
           <b>Consultancy</b>
         </div>
         <div class="content">
-          <b>Are you satisfied about how your organisation consumes data?</b><br>
+          <b>Are you satisfied with how your organisation consumes data?</b><br>
           How much does a manual and repetitive data manipulation cost you?
           Are there inefficiencies hidden within your processes?
           How much knowledge is lost because of lack of fluidity?
