--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <div class="content">
         Roberto is a digital native with 10 years of professional experience in the field of data,
         intersecting engineering, analytics and design.
-        He owns a Bachelor degree in Management Engineering from
+        He has a Bachelor's degree in Management Engineering from
         the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science from the same institute.
-        Roberto has collaborated with established companies, as well as young startups,
+        Roberto has collaborated with well-established companies, as well as with young startups,
         gaining experience in multiple industries, diving into any kind of data.
-        He loves to design and develop tools, automating processes, connecting dots.
-        As freelancer, he helps companies to get more out from their data.
+        He loves designing and developing tools, automating processes, connecting dots.
+        As a freelancer, he helps companies to get more out from their data.
         In his free time online, he explores the interaction between art and technology,
         while offline, he leverages his ability to move, communicate, write and read.
       </div>
@@ -92,11 +92,11 @@
       <div class="content">
         Technology is shaping any thinkable area.
         Roberto has the opportunity to ride this wave making a living out of it.
-        Back in 2012, a data expert was appetibile on the market if proficient with Microsoft Excel.
-        Around 2015 a strong switch, every analytical job was requiring at least a programming language.
-        Nowadays is not enough, a professional is complete only with machine learning skills.
+        Back in 2012, a data expert was desirable on the market if proficient with Microsoft Excel.
+        Around 2015 a strong switch happened: every analytical job required at least a programming language.
+        Nowadays is not enough, a professional is only complete with machine learning skills.
         You can talk to Roberto about any of these topics, about anything regarding data,
-        almost anything about computers, and if you would, anything else.
+        almost anything about computers, and if you want to, about anything else.
       </div>
     </div>
     <div class="section" id="Creativity">
@@ -112,7 +112,7 @@
         Roberto believes creativity can flourish when developed within a framework of positive attitude.
         This framework requires a constant amount of fresh energy, which can only
         be obtained choosing a healty lifestyle. Roberto's work reflects this attitude,
-        and his creativity gladly follows him along his journey.
+        and his creativity follows him gladly along his journey.
       </div>
     </div>
     <div class="section" id="Languages">
@@ -121,12 +121,12 @@
       </div>
       <div class="content">
         Roberto considers languages the most valuable asset an individual might have.  
-        He utopically believes that if any human being would be able to speak any language,
-        wars and inequalities would disappear.
-        New generations must focus on languages, and institutions should put this as first priority,
-        since it is during childhood that the real possibility to master an idiom can occur.
+        He utopically believes that if any human being would be able to communicate in any language,
+        wars and inequalities would disappear. New generations must focus on languages, 
+        and institutions should put this as their first priority,
+        since it is during childhood that the real possibility to master a language can occur.
         You can fluently communicate with Roberto in Italian, English and German.
-        Due to his origin, French and Spanish can be used for basic conversations.
+        Due to his origin, French and Spanish can be used for basic conversations, as well.
         Currently learning Chinese following a life goal project.
       </div>
     </div>
@@ -138,7 +138,8 @@
         Starting a new project, interacting with people, understanding requirements,
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is de facto standard.
-        In this hyper connected world, along this rollercoast, having trustful partners is a must.<br>
+        In this hyper connected world, along this rollercoaster,
+        having trustful partners is a must for success.<br>
         <a href="hire.html" target="_blank" rel="noopener" class="h1 to_next">Find out more.</a>
       </div>
     </div>
