--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         <b>Contact</b>
       </div>
       <div class="sub_title">
-        robimalco (at) gmail (dot) com
+        robimalco (at) gmail (dot) com<br>
+        <a target="_blank" href="Roberto_Malcotti_CV.pdf">
+          <i>resume</i>
+        </a>
       </div>
       <ul class="icon_list">
         <li class="icon_list__element">
