check and improve text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main_title_separator__down"></div>
     <div class="section">
       <div class="content">
-        Roberto is a digital native with 10 years of professional experience in the field of data,
+        Roberto is a digital native with 8 years of professional experience in the field of data,
         intersecting engineering, analytics and design.
         He has a Bachelor's degree in Management Engineering from
         the University of Applied Sciences of Southern Switzerland,
@@ -106,7 +106,7 @@
       <div class="content">
         Technology is shaping any thinkable area.
         Roberto has the opportunity to ride this wave making a living out of it.
-        Back in 2012, a data expert was desirable on the market if proficient with Microsoft Excel.
+        Back in 2012, a data expert was desirable on the market if proficient with Excel.
         Around 2015 a strong switch happened: every analytical job required at least a programming language.
         Nowadays is not enough, a professional is only complete with machine learning skills.
         You can talk to Roberto about any of these topics, about anything regarding data,
@@ -137,8 +137,7 @@
         Roberto considers languages the most valuable asset an individual might have.  
         He utopically believes that if any human being would be able to communicate in any language,
         wars and inequalities would disappear. New generations must focus on languages, 
-        and institutions should put this as their first priority,
-        since it is during childhood that the real possibility to master a language can occur.
+        and institutions should put this as their first priority.
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic conversations, as well.
         Currently learning Chinese following a life goal project.
