--- a/work.html
+++ b/work.html
@@ -44,9 +44,9 @@
         <b class="h2">BI Audit</b>
         <div class="content">
           The way an organisation implements and structures a BI tool is one of the first
-          signals about potential inefficiencies. At a certain level within an organisation
+          signals about potential inefficiencies. At a certain point within an organisation
           it is not possible anymore to understand opportunities and limitations. 
-          This is why having a professional looking at the tool from different angles 
+          Having a professional looking at the tool from different angles 
           can be extremely valuable.
         </div>
       </div>
@@ -55,8 +55,9 @@
         <div class="content">
           BI tools require regular maintenance. From managing permissions to 
           relocate queries, the number of daily hidden small tasks necessary to keep a system healthy 
-          and up to date is often underestimated. Any organisation would require a specific role to take 
-          care of these aspects, but is not always the case, leading during time to outdated systems.
+          and up to date is often underestimated. Any organisation would require a specific role to lead 
+          initiatives on these aspects, but is not always the case, 
+          producing during time to, outdated and fragile systems.
         </div>
       </div>
       <div class="bottom_space">
@@ -64,15 +65,15 @@
         <div class="content">
           Queries are getting slower, or presenting wrong results, and nobody knows why.
           With patience and dedication, even the most complex query can be divided into small pieces of code,
-          making it easier to debug, understanding what is not working, and most importantly, why is not working.
+          making it easier to manage, understanding what is not working, and most importantly, why is not working.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Query Optimisation</b>
         <div class="content">
-          Nobody likes slow queries. Data need to be delivered fast to enhance decisions 
+          Nobody likes slow queries. Data must be fluid to enhance decisions 
           and move business forward. Sometimes queries can be written better, while in other cases
-          tables' structure can be optimised allowing faster results. Moreover, queries' style must be
+          tables' structure can be optimised. Moreover, queries' writing style must be
           consistent, allowing a smart reuse of the code already written.
         </div>
       </div>
@@ -82,7 +83,7 @@
           Any company faces the need to extract data from the web. For a multitude of reasons, having
           the possibility to acquire data previously not available can lead to competitive advantages.
           Data are out there, but frequently not easy to access, because of time constraints or technical limitations.
-          Rely on reliable and scalable web crawlers to bring your data to a next level. 
+          Reliable and scalable web crawlers are essential parts of any technology stack.
         </div>
       </div>
       <div class="bottom_space">
@@ -90,14 +91,16 @@
         <div class="content">
           The biggest part of a machine learning project is the iterative process of
           features defining and features improvement. This activity can be considered boring
-          from a data scientist point of view, because not directly connected with algorithms behind the learning pipeline. However, it is crucial and important as the algorithm itself if not even more.
+          from a data scientist point of view, because not directly 
+          connected with algorithms behind the learning pipeline. 
+          However, it is crucial and important as the algorithm itself if not even more.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Automation</b>
         <div class="content">
           This section does not need presentation. A digital business not able to automise processes 
-          will face sooner or later big troubles. Automate from the day one in order to keep focus on what
+          will face sooner or later big troubles. Automate from day one in order to keep focus on what
           really matters: your business.
         </div>
       </div>
@@ -105,7 +108,7 @@
         <b class="h2">Marketing Automation</b>
         <div class="content">
           Marketing is probably the department where automation can be more significant and disruptive.
-          Indeed, marketing is also one of the biggest cost centre. Specific skills and talent are required to
+          Indeed, it is also one of the biggest cost centre. Specific skills and talent are required to
           drive leads to a company, that's why time cannot be wasted dealing with data in unproductive ways.
         </div>
       </div>
@@ -114,14 +117,14 @@
         <div class="content">
           KPIs are at the core of a business. Theoretically, any process would require monitoring by a KPI.
           There is however a bad habit to spend more time defining and building KPIs 
-          than using it. A wise decision is often to make a step back.
+          than using it. A wise decision is often to make a step back, simplifying the structure to take control.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Analysis</b>
         <div class="content">
-          Diving into data with the goal to analyze them is a must have skill for any person working in the
-          digital industry. However, things easily get too complex and articulated. Specific tools and 
+          Diving into data with the goal to get insights out of them is an essential skill for anyone 
+          working in the digital era. However, things easily get too complex and articulated. Specific tools and 
           techniques are required to provide punctual, correct and reproducible analysis.
         </div>
       </div>
@@ -129,23 +132,25 @@
         <b class="h2">Reporting</b>
         <div class="content">
           In the last ten years the activity of reporting has known an immense switch due to the rise 
-          of web technologies. Nowadays is not acceptable anymore to rely on a person to receive a report
-          at the same hour on a daily basis. It is never too late to modernize your reporting structure.
+          of web technologies. It is never too late to start modernizing your reporting structure.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Dashboard</b>
         <div class="content">
           A dashboard should not only be considered as data, queries and charts.
-          A dashboard is a story, combining design, aesthetics, UX and UI. Details are essential, as colors, backgrounds, fonts, sizes, titles, positions, headers, alignments, approachability, efficiency and engagement. A dashboard is a real product with real use cases and real users.
+          A dashboard is a story, combining design, aesthetics, UX and UI. 
+          Details are essential, as colors, backgrounds, fonts, sizes, titles, positions, headers, 
+          alignments, approachability, efficiency and engagement. 
+          A dashboard is a real product with real use cases and real users.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">API Development</b>
         <div class="content">
           API endpoints are critical for a business, because they allow interaction with external players,
-          but also to ensure a fluid flow of information within internal systems.
-          Standardise the creation of API endpoints with modern and light technologies,
+          as well as ensuring a fluid flow of information within internal systems.
+          Here the necessity to standardise the creation of API endpoints with modern and light technologies,
           while having always in control costs and performances. 
         </div>
       </div>
@@ -154,15 +159,15 @@
         <div class="content">
           Activity strictly connected with web crawling, but also with computer security.
           Without dealing with espionage or unethical things, API reverse engineering can
-          be necessary because documentation is not properly done, so there is the
-          need to self understand how things work.
+          be necessary for example when documentation is not properly done, or to QA software.
+          There is the often the need to self understand how things work behind the scenes.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Scripting and tools</b>
         <div class="content">
           Digital businesses' necessities are so variegated and colourful that is not possible to be
-          categorised them under a single umbrella. Any kind of small script or tool can save precious time,
+          categorised them under a single umbrella. Any kind of small script or tool can save precious energies,
           especially if an activity must be repeated multiple times.
         </div>
       </div>
@@ -171,33 +176,33 @@
         <div class="content">
           For years many have tried to get rid of sheets, but the truth is that they are here to stay.
           Moreover, sheets are getting better, making them easier to use,
-          more intuitive and programmable. There are people with the talent to make working with sheets
-          a pleasant experience, it is a luck to work closely with such a profile. 
+          more intuitive and programmable. There are people with the rare talent to make sheets
+          a pleasant experience. It is a luck to work closely with such a profile. 
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">ETL</b>
         <div class="content">
           Extract, transform and load is the core of modern data engineering. Any company has the need
-          to build reliable data pipelines, interacting with API endpoints as well as databases.
-          This activity must grant to a business the flexibility to scale without perceiving
-          downtimes or inconsistencies.
+          to build reliable data pipelines, interacting with API as well as databases.
+          This activity grant flexibility to scale without perceiving 
+          downtimes or inconsistencies, facilitating the growth of a business.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">ETL QA</b>
         <div class="content">
-          Once an ETL pipeline is done, it is time to test if outputs are correct.
+          Once an ETL pipeline is ready, it is time to test if outputs are correct.
           This activity is extremely important and can be achieved using proper techniques and technologies.
-          A good practice is letting evaluate the ETL's correctness not to the person who wrote it. 
+          Those tests often not only prove correctness, but are also a vital source of improvements and new ideas.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Notification</b>
         <div class="content">
-          As anything else, notifications if properly designed can be pleasant to be received and to be
-          consumed. It is not time anymore to spam around unreadable bad formatted messages,
-          taking into account the incredibles technologies available today for this exact purpose. 
+          As anything else, notifications if properly designed can be pleasant experience if properly managed.
+          It is not time anymore to spam around unreadable bad formatted messages,
+          considering the incredibles technologies available today for this exact purpose. 
         </div>
       </div>
       </div>
