--- a/hire.html
+++ b/hire.html
@@ -61,7 +61,7 @@
         <div class="content">
           <b>Your data are not moving fluidly, and I know why.</b><br>
           In a fast-paced environment it is rarely possible to move things forward 
-          while leveraging data flow's quality. Expertises are required to tackle bottle necks,
+          while leveraging data quality. Expertises are required to tackle bottle necks,
           often just observing things from different points of view.
           Let's discover together how to increase your efficiency.
         </div>
@@ -71,7 +71,7 @@
           <b>Consultancy</b>
         </div>
         <div class="content">
-          <b>Are you satisfied with how your organisation consumes data?</b><br>
+          <b>Are you satisfied how your organisation consumes data?</b><br>
           How much does a manual and repetitive data manipulation cost you?
           Are there inefficiencies hidden within your processes?
           How much knowledge is lost because of lack of fluidity?
@@ -266,7 +266,7 @@
       </div>
       <div class="content">
         Through the years and the constant work, it has been possible to acquire new skills,
-        continuing to improve and to evolve those already present.
+        improving and evolving those already present.
         The quality of the results reflects this growth.
         Discover all the services and opportunities to collaborate.<br>
         <a href="work.html" target="_blank" rel="noopener" class="h1 to_next">
