--- a/hire.html
+++ b/hire.html
@@ -102,6 +102,11 @@
           </a>
         </li>
         <li class="icon_list__element">
+          <a href="https://golang.org" target="_blank" rel="noopener">
+            <img src="images/tech/golang.png" class="icon_list__logo" alt="golang" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
           <a href="https://www.python.org" target="_blank" rel="noopener">
             <img src="images/tech/python.png" class="icon_list__logo" alt="python" loading="lazy">
           </a>
