Add Colly and Chromedp

--- a/hire.html
+++ b/hire.html
@@ -147,6 +147,11 @@
           </a>
         </li>
         <li class="icon_list__element">
+          <a href="https://github.com/chromedp/chromedp" target="_blank" rel="noopener">
+            <img src="images/tech/chromedp.png" class="icon_list__logo" alt="chromedp" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
           <a href="https://cloud.google.com/functions" target="_blank" rel="noopener">
             <img src="images/tech/cloud_functions.png" class="icon_list__logo" alt="cloud_functions" loading="lazy">
           </a>
@@ -204,6 +209,11 @@
         <li class="icon_list__element">
           <a href="https://selenium-python.readthedocs.io" target="_blank" rel="noopener">
             <img src="images/tech/selenium.png" class="icon_list__logo" alt="selenium" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="http://go-colly.org/" target="_blank" rel="noopener">
+            <img src="images/tech/colly.png" class="icon_list__logo" alt="colly" loading="lazy">
           </a>
         </li>
         <li class="icon_list__element">
