--- a/hire.html
+++ b/hire.html
@@ -273,6 +273,11 @@
             <img src="images/client/caroobi.png" class="icon_list__logo" alt="caroobi" loading="lazy">
           </a>
         </li>
+        <li class="icon_list__element">
+          <a href="https://www.zolar.de/" target="_blank" rel="noopener">
+            <img src="images/client/zolar.png" class="icon_list__logo" alt="zolar" loading="lazy">
+          </a>
+        </li>
       </ul>
     </div>
     <div class="section last_section">
