--- a/hire.html
+++ b/hire.html
@@ -91,6 +91,18 @@
         </div>
       </div>
     </div>
+	<div class="section">
+      <div class="sub_title h2">
+        <b>Resume</b>
+      </div>
+      <ul class="icon_list">
+        <li class="icon_list__element">
+          <a target="_blank"  rel="noopener" href="Roberto_Malcotti_CV.pdf">
+            <img src="images/tech/resume.png" class="icon_list__logo" alt="resume" loading="lazy">
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="section">
       <div class="sub_title h2">
         <b>Tech stack</b>
