add postgresql instead of sql

--- a/hire.html
+++ b/hire.html
@@ -109,8 +109,8 @@
       </div>
       <ul class="icon_list">
         <li class="icon_list__element">
-          <a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener">
-            <img src="images/tech/sql.png" class="icon_list__logo" alt="SQL" loading="lazy">
+          <a href="https://www.postgresql.org/" target="_blank" rel="noopener">
+            <img src="images/tech/postgresql.png" class="icon_list__logo" alt="postgresql" loading="lazy">
           </a>
         </li>
         <li class="icon_list__element">
