--- a/work.html
+++ b/work.html
@@ -41,6 +41,16 @@
     </div>
     <div class="section">
       <div class="bottom_space">
+        <b class="h2">Datalization</b>
+        <div class="content">
+          This word officially does not exists, and it is often used in conjunction with digitalization.
+          It gives a powerful understanding of what companies, 
+          which are transitioning from old managament paradigms to new ones, are looking for to survive.
+          Datalizations brings digitalisation. 
+          A company able to rely on a strong and flexible data structure is a company that can take data drive decisions.
+        </div>
+      </div>
+      <div class="bottom_space">
         <b class="h2">BI Audit</b>
         <div class="content">
           The way an organisation implements and structures a BI tool is one of the first
