--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
           relocate queries, the number of daily hidden small tasks necessary to keep a system healthy 
           and up to date is often underestimated. Any organisation would require a specific role to lead 
           initiatives on these aspects, but is not always the case, 
-          producing during time to, outdated and fragile systems.
+          producing during time outdated and fragile systems.
         </div>
       </div>
       <div class="bottom_space">
