--- a/work.html
+++ b/work.html
@@ -195,7 +195,7 @@
         <div class="content">
           Extract, transform and load is the core of modern data engineering. Any company has the need
           to build reliable data pipelines, interacting with API as well as databases.
-          This activity grant flexibility to scale without perceiving 
+          This activity must grant flexibility to scale without perceiving 
           downtimes or inconsistencies, facilitating the growth of a business.
         </div>
       </div>
