new section and small improvments

--- a/hire.html
+++ b/hire.html
@@ -8,7 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-P8DTWSF');</script>
     <!-- End Google Tag Manager -->
-    <title>Data Engineering - Analytics - Design</title>
+    <title>Hire</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Hire Roberto" content="Enhance your data through meaningful collaborations.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
