--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-P8DTWSF');</script>
     <!-- End Google Tag Manager -->
-    <title>Hands On- What can be built together</title>
+    <title>Hands On</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Work" content="Build a better version of your company">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
@@ -215,6 +215,17 @@
           considering the incredibles technologies available today for this exact purpose. 
         </div>
       </div>
+    </div>
+    <div class="section last_section">
+      <div class="sub_title h2">
+        <b>Thoughts</b>
+      </div>
+      <div class="content">
+        Wow, you have reached this point, this means a lot to me.
+        There might be a bit more to read, not specifically connected to my career.<br>
+        <a href="thoughts.html" target="_blank" rel="noopener" class="h1 to_next">
+          I accept this risk
+        </a>
       </div>
     </div>
   </body>
