--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-P8DTWSF');</script>
     <!-- End Google Tag Manager -->
-    <title>Roberto Malcotti</title>
+    <title>Roberto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Roberto Malcotti" content="Meet Roberto and learn more about him.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
