--- a/work.html
+++ b/work.html
@@ -221,7 +221,7 @@
         <b>Thoughts</b>
       </div>
       <div class="content">
-        Wow, you have reached this point, this means a lot to me.
+        Wow, you have reached this point, this means a lot to me.<br>
         There might be a bit more to read, not specifically connected to my career.<br>
         <a href="thoughts.html" target="_blank" rel="noopener" class="h1 to_next">
           I accept this risk
