--- a/thoughts.html
+++ b/thoughts.html
@@ -8,7 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-P8DTWSF');</script>
     <!-- End Google Tag Manager -->
-    <title>Thoughts - Something more personal</title>
+    <title>Thoughts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Work" content="Build a better version of your company">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
