--- a/thoughts.html
+++ b/thoughts.html
@@ -36,11 +36,11 @@
       </div>
       <div class="thoughts_date_place"><i>10/08/2020 ~ Messina ~ <span id="countWords1"></span> words</i></div>
       <div class="content content_blog" id="thoughts1">
-        The beauty and importance of writing by hand is still unbeatable, however, whether they are manual or digital, the triggered mental mechanisms are almost the same.
+        The beauty and importance of writing by hand is still unbeatable. However, whether manual or digital, the triggered mental mechanisms are almost the same.
 
-        Writing following a rigid apporach: one argument, one hundred words, seamlessly picking a topic of which there is a natural desire to talk about.
+        Writing following a rigid apporach: one argument, one hundred words, seamlessly picking a topic of which there is natural desire to talk about.
 
-        These limitations to teach specificness, without wasting resources decorating superficialities. Words are precious, they must be used with care.
+        These limitations in order to teach specificness without wasting resources decorating superficialities. Words are precious, they must be used with care.
 
         Repeating this activity will help developing many important skills, in addition to a good collection of reflections which might be useful for a future version of yourself.
       </div>
