Update second thought

--- a/thoughts.html
+++ b/thoughts.html
@@ -31,10 +31,10 @@
       <b>Thoughts</b>
     </div>
     <div class="section">
+
       <div class="sub_title h2">
         <b>Writing</b>
       </div>
-
       <div class="thoughts_date_place"><i>10/08/2020 ~ Messina ~ <span id="countWords1"></span> words</i></div>
       <div class="content content_blog" id="thoughts1">
         The beauty and importance of writing by hand is still unbeatable. However, whether manual or digital, the triggered mental mechanisms are almost the same.
@@ -46,6 +46,9 @@
         Repeating this activity will help developing many important skills, in addition to a good collection of reflections which might be useful for a future version of yourself.
       </div>
 
+      <div class="sub_title h2">
+        <b>Return</b>
+      </div>
       <div class="thoughts_date_place"><i>15/08/2020 ~ Isola d'Elba ~ <span id="countWords2"></span> words</i></div>
       <div class="content content_blog" id="thoughts2">
         Probably only life, intended as existence, is a one way journey. Anything else recursively requires a return.
