better layout thoughts

--- a/thoughts.html
+++ b/thoughts.html
@@ -30,8 +30,9 @@
     <div class="main_title h1">
       <b>Thoughts</b>
     </div>
-    <div class="section">
+    <div class="main_title_separator__down"></div>
 
+    <div class="section">
       <div class="sub_title h2">
         <b>Writing</b>
       </div>
@@ -45,7 +46,9 @@
 
         Repeating this activity will help developing many important skills, in addition to a good collection of reflections which might be useful for a future version of yourself.
       </div>
+    </div>
 
+    <div class="section">
       <div class="sub_title h2">
         <b>Return</b>
       </div>
@@ -63,8 +66,8 @@
         
         When something ends, something new starts.
       </div>
-
     </div>
+
     <script type="text/javascript">
       window.onload = function() {
         var thoughts = document.querySelectorAll('[id^="thoughts"]');
