--- a/thoughts.html
+++ b/thoughts.html
@@ -84,7 +84,7 @@
         
         Never underestimate the importance to talk about it with others, as well as the awareness of how bitterness itself gives strength to try again.
         
-        On the other hand, with slight obviousness, the only way to understand joy is to meet bitterness.
+        On the other hand, with slight obviousness, the only way to understand joy is to experience bitterness.
       </div>
     </div>
 
