--- a/tweets.html
+++ b/tweets.html
@@ -40,6 +40,9 @@
       </div>
     </div>
     <div class="section">
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">There are engineers which can only shine within a framework of trust and freedom. Tech processes are just a serious threath to the outcomes they can produce</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1297301456907894786?ref_src=twsrc%5Etfw">August 22, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="section">
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">One of the best feeling as developer is when you are able to add new features while simplifiying the existing ones</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1297246087988809738?ref_src=twsrc%5Etfw">August 22, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
     <div class="section">
