--- a/thoughts.html
+++ b/thoughts.html
@@ -87,6 +87,28 @@
         On the other hand, with slight obviousness, the only way to understand joy is to experience bitterness.
       </div>
     </div>
+    
+    <div class="section">
+      <div class="sub_title h2">
+        <b>Dreams</b>
+      </div>
+      <div class="thoughts_date_place"><i>25/08/2020 ~ Ticinallo ~ <span id="countWords4"></span> words</i></div>
+      <div class="content content_blog" id="thoughts4">
+        How dreams work is still a mystery.
+
+        What is certain is how they give the impetus to achieve goals that are apparentely too far to reach.
+
+        Some are so beautiful that it is even hard to think about them.
+
+        Others are dreams to unlock new dreams, as if they are the door to access a magical world.
+
+        Dreams are perhaps more beautiful if shared with someone. They are probably easier to achieve.
+
+        Dreaming about someone so far away that might seem unreachable.
+        
+        But exactly there is the secret of the dream: never stop believing in it.
+      </div>
+    </div>
 
     <script type="text/javascript">
       window.onload = function() {
