--- a/thoughts.html
+++ b/thoughts.html
@@ -109,6 +109,24 @@
         But exactly there is the secret of the dream: never stop believing in it.
       </div>
     </div>
+    
+    <div class="section">
+      <div class="sub_title h2">
+        <b>Changes</b>
+      </div>
+      <div class="thoughts_date_place"><i>01/09/2020 ~ Kreuzberg ~ <span id="countWords5"></span> words</i></div>
+      <div class="content content_blog" id="thoughts5">
+        In youth changes are daily bread. A continuous, sometimes excessive search for the new.
+        
+        Growing up means avoiding the unplanned whenever possible, while focusing instead on specific and targeted changes.
+
+        Everyday life shows that small changes are happening continuously all around, while switching perspective for a certain time reveals the substantial ones.
+
+        Despite appearance seems to say that changes have occurred, for a good observer, a deeper view shows that at the end of the day, nothing has really changed.
+
+        Arriving at this conclusion most probably means that a change has happened without being noticed on an earlier stage. The interior one.
+      </div>
+    </div>
 
     <script type="text/javascript">
       window.onload = function() {
