--- a/work.html
+++ b/work.html
@@ -51,6 +51,15 @@
         </div>
       </div>
       <div class="bottom_space">
+        <b class="h2">Data literacy</b>
+        <div class="content">
+          The ability to manipulate data has nowday the same importance of mathematics or English: a must. 
+          Learning can be a fun and interesting activity, if done with the right apporach.
+          As input practical live excercises focusing on real world problems.
+          As output, improved skills of data management, data thinking and problem solving.
+        </div>
+      </div>
+      <div class="bottom_space">
         <b class="h2">BI Audit</b>
         <div class="content">
           The way an organisation implements and structures a BI tool is one of the first
