--- a/work.html
+++ b/work.html
@@ -53,9 +53,9 @@
       <div class="bottom_space">
         <b class="h2">Data literacy</b>
         <div class="content">
-          The ability to manipulate data has nowday the same importance of mathematics or English: a must. 
-          Learning can be a fun and interesting activity, if done with the right apporach.
-          As input practical live excercises focusing on real world problems.
+          The ability to manipulate data has nowadays the same importance of mathematics or English. 
+          Learning can be a fun and interesting activity, if done with the right approach.
+          As input, practical live exercises focusing on real world problems.
           As output, improved skills of data management, data thinking and problem solving.
         </div>
       </div>
