--- a/thoughts.html
+++ b/thoughts.html
@@ -127,6 +127,28 @@
         Arriving at this conclusion most probably means that a change has happened without being noticed on an earlier stage. The interior one.
       </div>
     </div>
+    
+    <div class="section">
+      <div class="sub_title h2">
+        <b>Inputs</b>
+      </div>
+      <div class="thoughts_date_place"><i>08/09/2020 ~ Kreuzberg ~ <span id="countWords6"></span> words</i></div>
+      <div class="content content_blog" id="thoughts6">
+        There are inputs of any kind, all around, a multitude of possibilities, an endless stream of potential directions.
+
+        Quality has a fundamental role, there is no fear in filtering out the noise.
+
+        Fussiness and selectivity, but also receptivity, positive unexpectedness comes from complete random situations.
+
+        Rumors whisper it seems the best ones are hidden just outside the comfort zone. 
+
+        There is also the other side. Be a source of inputs for other people.
+
+        Enthusiasm to discuss ideas, proposing alternatives, encouraging dreaming, finally criticize constructively.
+
+        Receiving and giving inputs go hand in hand, two sides of the same coin, essential to each other.
+      </div>
+    </div>
 
     <script type="text/javascript">
       window.onload = function() {
