--- a/tweets.html
+++ b/tweets.html
@@ -39,6 +39,19 @@
         Here presented a collection of Roberto's tweets he considers precious trying to save from the noise of the time.
       </div>
     </div>
+    
+    <div class="section">
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Is there maybe need in a tech department of a person fully dedicated to this activity? Never seen a job offer with titles like: &quot;Query Engineer&quot; or &quot;Backend Query Developer&quot;</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1303768354759544832?ref_src=twsrc%5Etfw">September 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="section">
+      <blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://t.co/8LM1EiSW90">pic.twitter.com/8LM1EiSW90</a></p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1300528003693400066?ref_src=twsrc%5Etfw">August 31, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="section">
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Online lessons of data management, data thinking and problem solving<br>IF/COUNTIF/MID/VLOOKUP/UNIQUE/SORT/INDEX/MATCH/TRANSPOSE/LARGE/ROW<a href="https://twitter.com/hashtag/data?src=hash&amp;ref_src=twsrc%5Etfw">#data</a> <a href="https://twitter.com/hashtag/analysis?src=hash&amp;ref_src=twsrc%5Etfw">#analysis</a> <a href="https://twitter.com/hashtag/analytics?src=hash&amp;ref_src=twsrc%5Etfw">#analytics</a> <a href="https://twitter.com/hashtag/excel?src=hash&amp;ref_src=twsrc%5Etfw">#excel</a> <a href="https://twitter.com/hashtag/learning?src=hash&amp;ref_src=twsrc%5Etfw">#learning</a> <a href="https://twitter.com/hashtag/remote?src=hash&amp;ref_src=twsrc%5Etfw">#remote</a> <a href="https://twitter.com/hashtag/teaching?src=hash&amp;ref_src=twsrc%5Etfw">#teaching</a> <a href="https://t.co/cFGaZuhAep">pic.twitter.com/cFGaZuhAep</a></p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1303019024075370501?ref_src=twsrc%5Etfw">September 7, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="section">
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The thing I really like of writing/translating in English is my ability to reduce a text to a really basic amount of words, still working, and still passing the same strong message</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1300855270181089285?ref_src=twsrc%5Etfw">September 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
     <div class="section">
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">There are engineers which can only shine within a framework of trust and freedom. Tech processes are just a serious threath to the outcomes they can produce</p>&mdash; robimalco (@robimalco) <a href="https://twitter.com/robimalco/status/1297301456907894786?ref_src=twsrc%5Etfw">August 22, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
